--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,7 +7,7 @@
     tools:context=".SettingsActivity">
 
     <TextView
-        android:id="@+id/textView_BTStatus"
+        android:id="@+id/textv_BTStatus"
         android:layout_width="335dp"
         android:layout_height="25dp"
         android:layout_marginStart="8dp"
@@ -44,7 +44,7 @@
         android:layout_marginBottom="8dp"
         android:scrollbars="vertical"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/textView_BTStatus"
+        app:layout_constraintBottom_toTopOf="@+id/textv_BTStatus"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
