--- a/app/src/main/res/layout/activity_vk.xml
+++ b/app/src/main/res/layout/activity_vk.xml
@@ -7,7 +7,7 @@
     tools:context=".VKActivity">
 
     <TextView
-        android:id="@+id/text_radius"
+        android:id="@+id/txtv_VKradius"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/text_geschw"
+        android:id="@+id/txtv_VKgeschw"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -30,12 +30,12 @@
         android:gravity="center"
         android:text="aktuelle Geschw."
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/text_gmax"
+        app:layout_constraintBottom_toTopOf="@+id/txtv_VKgmax"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/text_gmax"
+        android:id="@+id/txtv_VKgmax"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -44,20 +44,20 @@
         android:gravity="center"
         android:text="G Max"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/textv_VKBT"
+        app:layout_constraintBottom_toTopOf="@+id/txtv_VKBT"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textv_VKBT"
+        android:id="@+id/txtv_VKBT"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="TextView"
-        android:textSize="16sp"
         android:gravity="center"
+        android:text="BT Connection"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -70,10 +70,10 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/text_geschw"
+        app:layout_constraintBottom_toTopOf="@+id/txtv_VKgeschw"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_radius"
+        app:layout_constraintTop_toBottomOf="@+id/txtv_VKradius"
         tools:srcCompat="@tools:sample/avatars" />
 
 </android.support.constraint.ConstraintLayout>
