--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,21 +7,21 @@
     tools:context=".SettingsActivity">
 
     <TextView
-        android:id="@+id/textv_BTStatus"
+        android:id="@+id/txtv_BTbtStatus"
         android:layout_width="335dp"
         android:layout_height="25dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="TextView"
         android:gravity="center"
+        android:text="BT Connection"
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/txtv_BT"
         android:layout_width="291dp"
         android:layout_height="29dp"
         android:layout_marginStart="8dp"
@@ -44,8 +44,8 @@
         android:layout_marginBottom="8dp"
         android:scrollbars="vertical"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/textv_BTStatus"
+        app:layout_constraintBottom_toTopOf="@+id/txtv_BTbtStatus"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/txtv_BT" />
 </android.support.constraint.ConstraintLayout>
